--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         </intent>
     </queries>
     <application
-        android:label="flutter_text_to_speech_tutorial"
+        android:label="AncientEye"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
