--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutterfire_cli: ^0.1.1+2
   firebase_remote_config: ^4.4.2
   firebase_analytics: ^10.10.2
+  firebase_storage: ^11.7.5
 
 dev_dependencies:
   flutter_test:
